<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bgIv"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/header"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_main" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dataListRv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bgIv" />

    <TextView
        android:id="@+id/loading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waiting_for_response"
        android:textColor="@color/main_theme"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bgIv" />

    <com.eyalbira.loadingdots.LoadingDots
        android:id="@+id/loading_dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        app:LoadingDots_dots_color="@color/main_theme"
        app:LoadingDots_dots_count="4"
        app:LoadingDots_dots_size="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/loading_text"
        app:layout_constraintStart_toEndOf="@+id/loading_text"
        app:layout_constraintTop_toTopOf="@+id/loading_text" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/loading_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="loading_dots,loading_text" />

</androidx.constraintlayout.widget.ConstraintLayout>