<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:contentDescription="@string/header"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_main" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_header_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/backTv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/back_button"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="@+id/back_button" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/switch_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/switch_btn" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/switch_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/pair_switcher"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/switcher" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/ticker_info_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/detail_screen_start_end_margin"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:orientation="vertical"
            android:padding="10dp">

            <include
                android:id="@+id/row_1"
                layout="@layout/details_main_card_info_template"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <include
                android:id="@+id/row_2"
                layout="@layout/details_main_card_info_template"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <include
                android:id="@+id/row_3"
                layout="@layout/details_main_card_info_template"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/detail_screen_start_end_margin"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/main_theme"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middle_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/fifty_percent_ratio" />


    <include
        android:id="@+id/trade_items_heading"
        layout="@layout/trades_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/detail_screen_start_end_margin"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toBottomOf="@+id/ticker_info_panel" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tradesRv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/detail_screen_start_end_margin"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trade_items_heading" />

    <TextView
        android:id="@+id/loading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waiting_for_any_trade_to_happen"
        android:textColor="@color/main_theme"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticker_info_panel" />

    <com.eyalbira.loadingdots.LoadingDots
        android:id="@+id/loading_dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        app:LoadingDots_dots_color="@color/main_theme"
        app:LoadingDots_dots_count="4"
        app:LoadingDots_dots_size="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/loading_text"
        app:layout_constraintStart_toEndOf="@+id/loading_text"
        app:layout_constraintTop_toTopOf="@+id/loading_text" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/loading_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="loading_dots,loading_text" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/trades_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="tradesRv,trade_items_heading" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/selectorRv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:elevation="6dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
